Fix minimist version (security vulnerability).

--- a/VROOM-360Broadcaster/index.html
+++ b/VROOM-360Broadcaster/index.html
@@ -13,6 +13,10 @@
     <video class="video" id="localVideo" muted="true" autoplay></video>
   </div>
 
+  <script type="text/javascript">
+    window.clientType = 'Broadcaster';
+  </script>
+
   <script type="text/javascript" src="../js/main.js"></script>
 
 </body>
